...

                <ImageButton
                    android:id="@+id/banjoKazooie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/bayonetta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/bowser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/bowserJr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/bylthe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/captainFalcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/chrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/cloud"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/corrin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/daisy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/darkPit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/darkSamus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/diddyKong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/donkeyKong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/duckHunt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/falco"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/fox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/ganondorf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/greninja"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/hero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/iceClimbers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/ike"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/incineroar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/inkling"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/isabelle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/jigglypuff"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/joker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/ken"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/kingDedede"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/kirby"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/littleMac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/lucario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/lucas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/lucina"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/Luigi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/mario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/marth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/megaMan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/metaKnight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/mewtwo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/miiBrawler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/miiSwordfighter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
