...
            android:gravity="center|bottom"
            android:orientation="vertical"
            >


        <ImageButton
            android:id="@+id/characters"
            android:layout_width="225dp"
            android:layout_height="52dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:background="@drawable/menu_button_characterselect"
...
