package com.example.challengerapproaching;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

/** This test checks the character select screen to make sure
 *  all buttons are in the right place
 *  */

@LargeTest
@RunWith(AndroidJUnit4.class)
public class CharacterSelectScreenTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void characterSelectScreen() {
        ViewInteraction appCompatImageButton = onView(
                allOf(withId(R.id.characters),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                1),
                        isDisplayed()));
        appCompatImageButton.perform(click());

        ViewInteraction imageButton = onView(
                allOf(withId(R.id.banjoKazooie),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        0),
                                0),
                        isDisplayed()));
        imageButton.check(matches(isDisplayed()));

        ViewInteraction imageButton2 = onView(
                allOf(withId(R.id.bayonetta),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        0),
                                1),
                        isDisplayed()));
        imageButton2.check(matches(isDisplayed()));

        ViewInteraction imageButton3 = onView(
                allOf(withId(R.id.bowser),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        1),
                                0),
                        isDisplayed()));
        imageButton3.check(matches(isDisplayed()));

        ViewInteraction imageButton4 = onView(
                allOf(withId(R.id.bowserJr),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        1),
                                1),
                        isDisplayed()));
        imageButton4.check(matches(isDisplayed()));

        ViewInteraction imageButton5 = onView(
                allOf(withId(R.id.bylthe),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        2),
                                0),
                        isDisplayed()));
        imageButton5.check(matches(isDisplayed()));

        ViewInteraction imageButton6 = onView(
                allOf(withId(R.id.captainFalcon),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        2),
                                1),
                        isDisplayed()));
        imageButton6.check(matches(isDisplayed()));

        ViewInteraction imageButton7 = onView(
                allOf(withId(R.id.chrom),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        3),
                                0),
                        isDisplayed()));
        imageButton7.check(matches(isDisplayed()));

        ViewInteraction imageButton8 = onView(
                allOf(withId(R.id.cloud),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        3),
                                1),
                        isDisplayed()));
        imageButton8.check(matches(isDisplayed()));

        ViewInteraction imageButton9 = onView(
                allOf(withId(R.id.corrin),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        4),
                                0),
                        isDisplayed()));
        imageButton9.check(matches(isDisplayed()));

        ViewInteraction imageButton10 = onView(
                allOf(withId(R.id.daisy),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        4),
                                1),
                        isDisplayed()));
        imageButton10.check(matches(isDisplayed()));

        ViewInteraction imageButton11 = onView(
                allOf(withId(R.id.darkPit),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        5),
                                0),
                        isDisplayed()));
        imageButton11.check(matches(isDisplayed()));

        ViewInteraction imageButton12 = onView(
                allOf(withId(R.id.darkSamus),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        5),
                                1),
                        isDisplayed()));
        imageButton12.check(matches(isDisplayed()));

        ViewInteraction imageButton13 = onView(
                allOf(withId(R.id.diddyKong),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        6),
                                0),
                        isDisplayed()));
        imageButton13.check(matches(isDisplayed()));

        ViewInteraction imageButton14 = onView(
                allOf(withId(R.id.donkeyKong),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        6),
                                1),
                        isDisplayed()));
        imageButton14.check(matches(isDisplayed()));

        ViewInteraction imageButton15 = onView(
                allOf(withId(R.id.dr_mario),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        7),
                                0),
                        isDisplayed()));
        imageButton15.check(matches(isDisplayed()));

        ViewInteraction imageButton16 = onView(
                allOf(withId(R.id.duckHunt),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        7),
                                1),
                        isDisplayed()));
        imageButton16.check(matches(isDisplayed()));

        ViewInteraction imageButton17 = onView(
                allOf(withId(R.id.falco),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        8),
                                0),
                        isDisplayed()));
        imageButton17.check(matches(isDisplayed()));

        ViewInteraction imageButton18 = onView(
                allOf(withId(R.id.fox),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        8),
                                1),
                        isDisplayed()));
        imageButton18.check(matches(isDisplayed()));

        ViewInteraction imageButton19 = onView(
                allOf(withId(R.id.ganondorf),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        9),
                                0),
                        isDisplayed()));
        imageButton19.check(matches(isDisplayed()));

        ViewInteraction imageButton20 = onView(
                allOf(withId(R.id.greninja),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        9),
                                1),
                        isDisplayed()));
        imageButton20.check(matches(isDisplayed()));

        ViewInteraction imageButton21 = onView(
                allOf(withId(R.id.hero),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        10),
                                0),
                        isDisplayed()));
        imageButton21.check(matches(isDisplayed()));

        ViewInteraction imageButton22 = onView(
                allOf(withId(R.id.iceClimbers),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        10),
                                1),
                        isDisplayed()));
        imageButton22.check(matches(isDisplayed()));

        ViewInteraction imageButton23 = onView(
                allOf(withId(R.id.ike),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        11),
                                0),
                        isDisplayed()));
        imageButton23.check(matches(isDisplayed()));

        ViewInteraction imageButton24 = onView(
                allOf(withId(R.id.incineroar),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        11),
                                1),
                        isDisplayed()));
        imageButton24.check(matches(isDisplayed()));

        ViewInteraction imageButton25 = onView(
                allOf(withId(R.id.inkling),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        12),
                                0),
                        isDisplayed()));
        imageButton25.check(matches(isDisplayed()));

        ViewInteraction imageButton26 = onView(
                allOf(withId(R.id.isabelle),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        12),
                                1),
                        isDisplayed()));
        imageButton26.check(matches(isDisplayed()));

        ViewInteraction imageButton27 = onView(
                allOf(withId(R.id.jigglypuff),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        13),
                                0),
                        isDisplayed()));
        imageButton27.check(matches(isDisplayed()));

        ViewInteraction imageButton28 = onView(
                allOf(withId(R.id.joker),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        13),
                                1),
                        isDisplayed()));
        imageButton28.check(matches(isDisplayed()));

        ViewInteraction appCompatImageButton2 = onView(
                allOf(withId(R.id.pikachu),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.TableLayout")),
                                        26),
                                1)));
        appCompatImageButton2.perform(scrollTo());

        ViewInteraction imageButton29 = onView(
                allOf(withId(R.id.ken),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        14),
                                0),
                        isDisplayed()));
        imageButton29.check(matches(isDisplayed()));

        ViewInteraction imageButton30 = onView(
                allOf(withId(R.id.kingDedede),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        14),
                                1),
                        isDisplayed()));
        imageButton30.check(matches(isDisplayed()));

        ViewInteraction imageButton31 = onView(
                allOf(withId(R.id.kingK_Rool),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        15),
                                0),
                        isDisplayed()));
        imageButton31.check(matches(isDisplayed()));

        ViewInteraction imageButton32 = onView(
                allOf(withId(R.id.kirby),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        15),
                                1),
                        isDisplayed()));
        imageButton32.check(matches(isDisplayed()));

        ViewInteraction imageButton33 = onView(
                allOf(withId(R.id.link),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        16),
                                0),
                        isDisplayed()));
        imageButton33.check(matches(isDisplayed()));

        ViewInteraction imageButton34 = onView(
                allOf(withId(R.id.littleMac),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        16),
                                1),
                        isDisplayed()));
        imageButton34.check(matches(isDisplayed()));

        ViewInteraction imageButton35 = onView(
                allOf(withId(R.id.lucario),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        17),
                                0),
                        isDisplayed()));
        imageButton35.check(matches(isDisplayed()));

        ViewInteraction imageButton36 = onView(
                allOf(withId(R.id.lucas),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        17),
                                1),
                        isDisplayed()));
        imageButton36.check(matches(isDisplayed()));

        ViewInteraction imageButton37 = onView(
                allOf(withId(R.id.lucina),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        18),
                                0),
                        isDisplayed()));
        imageButton37.check(matches(isDisplayed()));

        ViewInteraction imageButton38 = onView(
                allOf(withId(R.id.Luigi),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        18),
                                1),
                        isDisplayed()));
        imageButton38.check(matches(isDisplayed()));

        ViewInteraction imageButton39 = onView(
                allOf(withId(R.id.mario),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        19),
                                0),
                        isDisplayed()));
        imageButton39.check(matches(isDisplayed()));

        ViewInteraction imageButton40 = onView(
                allOf(withId(R.id.marth),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        19),
                                1),
                        isDisplayed()));
        imageButton40.check(matches(isDisplayed()));

        ViewInteraction imageButton41 = onView(
                allOf(withId(R.id.megaMan),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        20),
                                0),
                        isDisplayed()));
        imageButton41.check(matches(isDisplayed()));

        ViewInteraction imageButton42 = onView(
                allOf(withId(R.id.metaKnight),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        20),
                                1),
                        isDisplayed()));
        imageButton42.check(matches(isDisplayed()));

        ViewInteraction imageButton43 = onView(
                allOf(withId(R.id.mewtwo),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        21),
                                0),
                        isDisplayed()));
        imageButton43.check(matches(isDisplayed()));

        ViewInteraction imageButton44 = onView(
                allOf(withId(R.id.miiBrawler),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        21),
                                1),
                        isDisplayed()));
        imageButton44.check(matches(isDisplayed()));

        ViewInteraction imageButton45 = onView(
                allOf(withId(R.id.miiSwordfighter),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        22),
                                0),
                        isDisplayed()));
        imageButton45.check(matches(isDisplayed()));

        ViewInteraction imageButton46 = onView(
                allOf(withId(R.id.miiGunner),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        22),
                                1),
                        isDisplayed()));
        imageButton46.check(matches(isDisplayed()));

        ViewInteraction imageButton47 = onView(
                allOf(withId(R.id.mr_GameWatch),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        23),
